get maze canvas to draw from data

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     </head>
     <body>
         <p>This will be an awesome maze.</p>
+        <canvas id="canvas" width="1010" height="1010"></canvas>
     </body>
 </html>
